Fixed the preview context bug, started implementing the UI (by myself) and fixed the faces in between the chunk that were getting rendered even tho invisible
---BIG CHANGES---
OpenGL preview context bug fixed (caused by a GLFW transparent
framebuffer compatibility issue).
Face in between the chunks don't render anymore (raw first
implementation, slow algorythm but the overall structure is there), now
every chunk stores a ref to the 4 adjacent chunks.
Changed from RmlUI's template example (which was just to test the UI
rendering capabilities) to an UI written by me using CSS and HTML
standards.

--- a/assets/UI/styles.css
+++ b/assets/UI/styles.css
@@ -5,38 +5,18 @@ body.centered {
     justify-content: center;
     align-items: center;
     margin: 0;
-    background: #111; /* optional dark background for contrast */
+    color: #00FFFFFF;
 }
 
 div.fancy-box {
-    font-family: "Hack-Regular";
-    background-color: #eeeeee;
+    font-family: "Hack";
+    background-color: #87af5f;
     padding: 20px;
     width: 300px;
     color: black;
     text-align: center;
+    vertical-align: bottom;
     animation: none;
-}
-
-/* Bounce animation */
-@keyframes click-bounce {
-    0%   { transform: rotate(0deg); }
-    10%  { transform: rotate(15deg); }
-    20%  { transform: rotate(-12deg); }
-    30%  { transform: rotate(9deg); }
-    40%  { transform: rotate(-6deg); }
-    50%  { transform: rotate(4deg); }
-    60%  { transform: rotate(-2deg); }
-    70%  { transform: rotate(1deg); }
-    80%  { transform: rotate(0deg); }
-    100% { transform: rotate(0deg); }
-}
-div.fancy-box.clicked {
-    font-family: "Hack-Regular";
-    background-color: #eeeeee;
-    padding: 20px;
-    width: 300px;
-    color: black;
-    text-align: center;
-    animation: click-bounce 3.4s ease-out;
+    position: absolute;
+    bottom: 10px;
 }
